--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <div id="nobody"></div>
 
 <section id="hero">
-	
-<div id="info">
+<div class="row">
+<div class="col" id="info">
 	<br>
 	<br>
 	<br>
@@ -43,11 +43,11 @@
 </div>
 </section>
 
-<section id="About">
+<section class="col" id="About">
 	<h2>About</h2>
 	<p> Pekenalkan saya Muhammad Qois Huzyan Octava, saya merupakan Software Engineer dan ini adalah karya Front End pertama saya. Disamping itu saya juga Director of Photography, Sejak 2017 saya aktif memegang peran media di berbagai organisasi dan kepanitiaan acara, saya juga menggemari fotografi lepas yang berburu foto sesuai sayembara yang sedang berlangsung. Sedangkan Bidang videografi saya mulai sejak tahun 2017, berawal dari dokumentasi acara dan pada tahun 2018 saya menyelesaikan beberapa proyek video clip yang diproduksi oleh SMA saya. </p>
 </section>
-
+</div>	
 <section id="Portfolio">
 	<h2>Portfolio</h2>
 	<img src="images/1.jpg">
@@ -72,7 +72,7 @@
 	<div class="col">
 		<img src="https://images-na.ssl-images-amazon.com/images/I/51Bmzfmvq%2BL._SY355_.png" width="50"><p>qois octava</p>
 	</div>
-	
+
 	</div>
 	
 </section>
